@@ -1,12 +1,10 @@
 /*
- * Copyright (c) 2016, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2021, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
  * under the terms of the GNU General Public License version 2 only, as
- * published by the Free Software Foundation.  Oracle designates this
- * particular file as subject to the "Classpath" exception as provided
- * by Oracle in the LICENSE file that accompanied this code.
+ * published by the Free Software Foundation.
  *
  * This code is distributed in the hope that it will be useful, but WITHOUT
  * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
@@ -22,17 +20,17 @@
  * or visit www.oracle.com if you need additional information or have any
  * questions.
  */
-package test.java.lang.invoke.t8150782;
 
-import static java.lang.invoke.MethodHandles.*;
+// key: compiler.err.pattern.expected
+// key: compiler.note.preview.filename
+// key: compiler.note.preview.recompile
+// options: --enable-preview -source ${jdk.version}
 
-public class TestCls {
-
-    public static final Lookup LOOKUP = lookup();
-
-    private static class PrivateSIC {}
-    public static Class getPrivateSIC() { return PrivateSIC.class; }
-    public static Lookup getLookupForPrivateSIC() { return lookup(); }
-
+class PatternSwitch {
+    private void doSwitch(Object o) {
+        switch (o) {
+            case String: break;
+            default: break;
+        }
+    }
 }
-
